--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.5.2"
 sqlalchemy = "^2.0.35"
 asyncpg = "^0.29.0"
 alembic = "^1.13.3"
+dishka = "^1.3.0"
 
 
 [build-system]
