--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ pydantic-settings = "^2.5.2"
 sqlalchemy = "^2.0.35"
 asyncpg = "^0.29.0"
 alembic = "^1.13.3"
-dishka = "^1.3.0"
+pytest = "^8.3.3"
+fast-depends = "^2.4.11"
 
 
 [build-system]
