--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ asyncpg = "^0.29.0"
 alembic = "^1.13.3"
 pytest = "^8.3.3"
 fast-depends = "^2.4.11"
+fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
 
 
 [build-system]
