--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ fastapi = "^0.115.0"
 uvicorn = {extras = ["standart"], version = "^0.31.0"}
 pydantic = {extras = ["email"], version = "^2.9.2"}
 pydantic-settings = "^2.5.2"
-sqlalchemy = "^2.0.35"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.3"
 pytest = "^8.3.3"
