--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,114 @@
 services:
-  db:
-      image: postgres:16.2
-      container_name: 'pharmacy_users_db'
+    auth_pharmacy_node1:
+      container_name: auth_pharmacy_node3
+      build:
+        dockerfile: ./Dockerfile
+      command:
+        - "make"
+        - "run"
       restart: always
-      shm_size: 128mb
-      environment:
-        POSTGRES_PASSWORD: 1234
-        POSTGRES_USER: symon
-        POSTGRES_DB: pharmacy_users
-      ports:
-        - "5432:5432"
+      env_file:
+        - .env
       volumes:
-        - db:/var/lib/postgresql/data
+        - ./logs/app1:/app/logs
+      networks:
+        - pharmacy
+
+    auth_pharmacy_node2:
+      container_name: auth_pharmacy_node4
+      build:
+        dockerfile: ./Dockerfile
+      command:
+        - "make"
+        - "run"
+      restart: always
+      env_file:
+        - .env
+      volumes:
+        - ./logs/app2:/app/logs
+      networks:
+        - pharmacy
+
+    db:
+        image: postgres:16.2
+        container_name: 'auth_pharmacy_db'
+        restart: always
+        shm_size: 128mb
+        environment:
+          POSTGRES_PASSWORD: 1234
+          POSTGRES_USER: symon
+          POSTGRES_DB: pharmacy_users
+        volumes:
+          - db:/var/lib/postgresql/data
+        networks:
+          - pharmacy
+
+    nginx_auth:
+      image: nginx:latest
+      volumes:
+        - /opt/homebrew/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
+      depends_on:
+        - auth_pharmacy_node1
+        - auth_pharmacy_node2
+      networks:
+        - pharmacy
+        - gateway
+
+    gateway:
+      container_name: gateway2
+      image: nginx:latest
+      volumes:
+        - /opt/homebrew/etc/nginx/gateway.conf:/etc/nginx/nginx.conf  # Конфигурация для Gateway
+      ports:
+        - "80:80"
+      depends_on:
+        - nginx_auth
+      networks:
+        - gateway
+
+
+
+    elasticsearch:
+      container_name: els2
+      image: elasticsearch:8.11.1
+      ports:
+        - 9200:9200
+      environment:
+        - discovery.type=single-node
+        - xpack.security.enabled=false
+      networks:
+        - gateway
+
+
+    kibana:
+      container_name: kibana2
+      image: kibana:8.11.1
+      depends_on:
+        - elasticsearch
+      ports:
+        - 5601:5601
+      networks:
+        - gateway
+
+    filebeat:
+      image: elastic/filebeat:8.10.0
+      container_name: pharmacy_auth_filebeat2
+      volumes:
+        - ./logs:/usr/share/filebeat/logs:ro
+        - ./filebeat.yml:/usr/share/filebeat/filebeat.yml:ro # :ro - read only
+      depends_on:
+        - elasticsearch
+        - kibana
+      networks:
+        - gateway
+
 
 volumes:
   db:
     driver: local
+
+networks:
+  pharmacy:
+    driver: bridge
+  gateway:
+    driver: bridge
