--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,11 @@ services:
         restart: always
         shm_size: 128mb
         environment:
-          POSTGRES_PASSWORD: 1234
-          POSTGRES_USER: symon
-          POSTGRES_DB: pharmacy_users
+          POSTGRES_PASSWORD: POSTGRES_PASSWORD
+          POSTGRES_USER: POSTGRES_USER
+          POSTGRES_DB: POSTGRES_DB
+        env_file:
+          - .docker.env
         volumes:
           - db:/var/lib/postgresql/data
         networks:
